Bug 493586. JSON.parse replacer function doesn't elide object values correctly. r=brendan